Fixed small layout issue on mobile

--- a/style.css
+++ b/style.css
@@ -816,3 +816,7 @@ body {
 #ui-bottom-bar {
     position: fixed !important;
 }
+
+#ui-top-capsule {
+    position: fixed !important;
+}
